working on the dead_volume calculating page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,6 @@
 <h1>Find me in app/views/pages/index.html.erb</h1>
+Here are the utilities available on this site:
+<ul>
+	<li><%= link_to 'Dead Volume Calculator', 'dead_volume' %></li>
+	<li><%= link_to 'Other ones...' %></li>
+</ul>
