--- a/app/views/pages/dead_volume.html.erb
+++ b/app/views/pages/dead_volume.html.erb
@@ -1,13 +1,13 @@
 <h2>Here I'll calculate the dead volume of a piece of tubing for you.</h2>
 
-<%= form_tag url_for(:method => :get), :remote => true, :id => 'calculation_entry' do %>
+<%= form_tag({}, :method => :get, :remote => true, :id => 'calculation_entry') do %>
   <div id="internal_diameter">
     <label for="diameter">Enter the internal diameter:</label>
     <%= text_field_tag :diameter %>
     <label for="diameter_unit"></label>
     <%= select_tag :diameter_unit, options_for_select({
-      "Microns" => 'micrometers', 
-      'inches' => 'inches'
+      "Microns" => 'micrometer', 
+      'inches' => 'inch'
     })  %>  
   </div>
   <div id="length">
@@ -15,14 +15,13 @@
     <%= text_field_tag :length %>
     <label for="length_unit"></label>
     <%= select_tag :length_unit, options_for_select({
-      "meters" => 'meters', 
-      "inches" => 'inches'
+      "meters" => 'meter', 
+      "inches" => 'inch'
     })  %>
   </div>
   <%= submit_tag "Calculate!" %>
 <% end %>
-
-<div class="output">
-  <span>The volume of the tubing parameters entered is:</span> 
- <%= @object %>
-</div>
+<% if @answer %>
+  <div id="output">
+ </div>
+<% end %>
