fixed the root link and some formatting on the output

--- a/app/views/pages/dead_volume.html.erb
+++ b/app/views/pages/dead_volume.html.erb
@@ -21,7 +21,4 @@
   </div>
   <%= submit_tag "Calculate!" %>
 <% end %>
-<% if @answer %>
-  <div id="output">
- </div>
-<% end %>
+<div id="output"> </div>
