--- a/app/views/pages/dead_volume.js.erb
+++ b/app/views/pages/dead_volume.js.erb
@@ -1,2 +1,2 @@
-$('#output').html('The volume of the tubing parameters entered is: <%= @answer %> microliters.');
+$('#output').html('The volume of the tubing parameters entered is: <%= "%6f" % @answer %> microliters.');
 
