--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,5 +2,6 @@
 Here are the utilities available on this site:
 <ul>
 	<li><%= link_to 'Dead Volume Calculator', 'pages/dead_volume' %></li>
+	<li><%= link_to 'PPM Calculator', 'pages/ppm_calculator' %></li>
 	<li><%= link_to 'Other ones...' %></li>
 </ul>
